<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/by_popular"
        android:orderInCategory="1"
        android:title="@string/select_popular"
        app:showAsAction="never"/>
    <item
        android:id="@+id/by_top_rated"
        android:orderInCategory="2"
        android:title="@string/select_top_rated"
        app:showAsAction="never"/>
    <item
        android:id="@+id/by_favourites"
        android:orderInCategory="3"
        android:title="@string/select_favourites"
        app:showAsAction="never"/>

</menu>