<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/details_display"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/s_msgview_2"
            android:visibility="gone"
            android:textColor="@color/colorBlack"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="parent"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/s_title"
            android:padding="@dimen/standard_padding"
            android:textColor="#FFFFFF"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintTop_toBottomOf="@id/s_msgview_2"/>

        <ImageView
            android:id="@+id/s_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/standard_padding"
            app:layout_constraintTop_toBottomOf="@id/s_title"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s_release_date"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingTop="@dimen/standard_padding"
            android:paddingBottom="@dimen/standard_padding"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/s_poster"
            app:layout_constraintTop_toBottomOf="@id/s_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s_rating"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingTop="@dimen/standard_padding"
            android:paddingBottom="@dimen/standard_padding"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/s_poster"
            app:layout_constraintTop_toBottomOf="@id/s_release_date"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingTop="@dimen/standard_padding"
            android:paddingBottom="@dimen/standard_padding"
            android:textSize="12sp"
            android:id="@+id/b_favourite"
            android:onClick="setFavouriteField"
            android:background="@android:color/holo_orange_light"
            app:layout_constraintLeft_toRightOf="@id/s_poster"
            app:layout_constraintTop_toBottomOf="@id/s_rating"
            android:text="@string/mark_favourite" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_star"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/s_rating"
            app:layout_constraintLeft_toRightOf="@id/b_favourite"
            android:src="@mipmap/ic_favourite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s_synopsis"
            android:paddingLeft="@dimen/standard_padding"
            android:layout_marginRight="@dimen/extra_right_margin"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/s_poster"/>
        <!-- Not used here, kept for programming other layouts -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="invisible"
            android:id="@+id/separator_h"
            app:layout_constraintTop_toBottomOf="@id/s_synopsis" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:id="@+id/s_trailers"
            android:textColor="@color/colorWhite"
            android:text="@string/no_trailers"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/separator_h"/>


        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/lv_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            app:layout_constraintTop_toBottomOf="@id/s_trailers"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:id="@+id/s_reviews"
            android:textColor="@color/colorWhite"
            android:text="@string/no_reviews"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/lv_trailers"/>


        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/lv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            app:layout_constraintTop_toBottomOf="@id/s_reviews"/>



    </android.support.constraint.ConstraintLayout>
</ScrollView>